--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
-* Willian Mollinari <pothix@pothix.com>
-* Diego Souza <dsouza@c0d3.xxx>
+* Willian Mollinari (pothix) <pothix@pothix.com>
+* Diego Souza (dgvncsz0f) <dsouza@c0d3.xxx>
